auto-test/tests/chapter_18/invalid_types/extra_credit/other_features/prefix_decr_struct.c

struct s {
    int i;
};

int main(void) {
    struct s my_struct = {1};
    --my_struct;
    return 0;
}